Changelog
=========

### v1.6.0

* [Mongo Console] Add replicaset support to correctly connect to them #306
* [Notifiers] Add Notifiers related commands #303 #301 #297 #296:

```
     notifiers          List your notifiers
     notifiers-details  Show details of your notifiers
     notifiers-add      Add a notifier for your application
     notifiers-update   Update a notifier
     notifiers-remove   Remove an existing notifier from your app
```

* [Notifications] Feature removed, replaced by notifiers, all the notifications have been migrated to notifiers #307
* [Internals] Migrate to original `urfave/cli` instead of using our own fork of the library #290
* [Update] Add timeout in update checking to avoid the CLI to freeze when GitHub is down for instance #274
* [Auth] When authentication file is corrupted, recreate a new one instead of crashing #283
* [Logs-archive] Logs archives are now listable and downloadable from the CLI #289
* [Logs] Lines are now colored according to the source of the line #286

### v1.5.1

* [Feature] Authenticate your request using the environment by using the environment variable `SCALINGO_API_TOKEN` #291

### v1.5.0

* [Feature] Add `deploy` command to deploy a tarball or a war archive directly

```
scalingo deploy archive.tar.gz
scalingo deploy project.war
scalingo deploy https://github.com/Scalingo/sample-go-martini/archive/master.tar.gz
```

### v1.4.1

* [Fix] Fix error message when a user tries to break its free trial before the end #458
* [Feature] Add `influxdb-console` to run an influxdb interactive shell in a one-off container

### v1.4.0 - 16/11/2016

* [Feature] Add timeline and user-timeline to display per are of user-global activities #235
* [Feature] Add list, remove and add commands for notifications
* [Feature] Add `deployments` command to get the a deployments list for an application #222 #234
* [Feature] Add `deployment-logs` command to get logs for a specific deployment